--- a/portfolio.html
+++ b/portfolio.html
@@ -19,12 +19,14 @@
 
 <body>
     <header class="container  header header__flex ">
-        <div class="mobile__menu-header"> <a href="#" class="logo link"> Web<span class=" logo__text logo__text--dark">Studio</span></a>
-        <button type="button" class="btn-menu btn-menu--open"  data-menu-open >
-            <svg width="24" height="16">
-                <use  class="icon-menu"  href="./images/icons.svg#icon-menu"></use>
-            </svg>
-            </button></div>
+        <div class="mobile__menu-header"> <a href="#" class="logo link"> Web<span
+                    class=" logo__text logo__text--dark">Studio</span></a>
+            <button type="button" class="btn-menu btn-menu--open" data-menu-open>
+                <svg width="24" height="16">
+                    <use class="icon-menu" href="./images/icons.svg#icon-menu"></use>
+                </svg>
+            </button>
+        </div>
             
             <nav >
                 <ul class=" nav list header__flex">
@@ -311,7 +313,7 @@
             </ul>
         </div>
     </div>
-    <script src="./js/menu.js"></script>
+    <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
     </body>
     
